Added words on the first sentence

--- a/content.html
+++ b/content.html
@@ -1,1 +1,1 @@
-Hi there my name is Francis Yvan Jubera and I am a Front End Web Developer.
+Hi there my name is Francis Yvan Jubera and I am a student learning Web Development.
