Added a second sentence

--- a/content.html
+++ b/content.html
@@ -1,1 +1,2 @@
 Hi there my name is Francis Yvan Jubera and I am a student learning Web Development.
+Currently, I'm learning how to use Git and GitHub.
